--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
     "gatsby-plugin-sharp": "^2.4.13",
     "gatsby-plugin-styled-components": "^3.2.4",
     "gatsby-plugin-typescript": "^2.3.1",
+    "gatsby-remark-images": "^3.3.1",
+    "gatsby-remark-prismjs": "^3.5.1",
+    "gatsby-remark-relative-images": "^0.3.0",
     "gatsby-source-filesystem": "^2.1.56",
-    "gatsby-transformer-remark": "^2.7.1",
+    "gatsby-transformer-remark": "^2.8.6",
     "gatsby-transformer-sharp": "^2.3.19",
+    "prismjs": "^1.20.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
