--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "gatsby-starter-default",
+  "name": "aimho-blog",
   "private": true,
-  "description": "A simple starter to get up and developing quickly with Gatsby",
+  "description": "IT 스타트업 개발자(30, 남)의 고뇌를 담은 블로그",
   "version": "0.1.1",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
+  "author": "AimHo <jjhwhwnsgh@gmail.com>",
   "dependencies": {
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
