--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "dependencies": {
     "@material-ui/core": "^4.9.8",
     "@material-ui/icons": "^4.9.1",
+    "@types/react-lottie": "^1.2.5",
     "@types/styled-components": "^5.1.0",
     "babel-plugin-styled-components": "^1.10.7",
     "disqus-react": "^1.0.8",
@@ -33,7 +34,10 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
-    "styled-components": "^5.1.0"
+    "react-hook-form": "^7.2.2",
+    "react-lottie": "^1.2.3",
+    "styled-components": "^5.1.0",
+    "styled-reset": "^4.3.4"
   },
   "devDependencies": {
     "prettier": "^1.19.1",
